--- a/src/piccolo_os/CMakeLists.txt
+++ b/src/piccolo_os/CMakeLists.txt
@@ -1,7 +1,7 @@
 if (NOT TARGET piccolo_os)
     add_library(piccolo_os INTERFACE)
 
-    target_sources(alyx_os INTERFACE
+    target_sources(piccolo_os INTERFACE
             ${CMAKE_CURRENT_LIST_DIR}/include/piccolo/os.h
             ${CMAKE_CURRENT_LIST_DIR}/include/piccolo/os.h
             ${CMAKE_CURRENT_LIST_DIR}/include/piccolo/os.h
