add piccolo os (#23)
Closes #20 
Closes #23 

Signed-off-by: Alex <130048160+bauer-alex-174@users.noreply.github.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,3 +6,4 @@ pico_add_subdirectory(alyx_stdlib)
 pico_add_subdirectory(alyx_time)
 pico_add_subdirectory(alyx_temp)
 pico_add_subdirectory(alyx_uart)
+pico_add_subdirectory(piccolo_os)
